# pycomcigan

./: LICENSE  README.md  comcigan.md  docs.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
hegelty.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pycomcigan/: __init__.py  search_school.py  timetable.py
pycomcigan.egg-info/: PKG-INFO  SOURCES.txt
